[package]
name = "sanctioned_transfer_hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sanctioned_transfer_hook"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies.anchor-lang]
version = "0.30.1"
[dependencies.anchor-spl]
version = "0.30.1"
[dependencies.spl-transfer-hook-interface]
version = "0.6.5"
[dependencies.spl-tlv-account-resolution]
version = "0.6.5"